# hodler-core

./: Cargo.toml  README.md  appspec.yml  rust-toolchain.toml
.github/workflows/: deployment.yml  integration.yml  specification.yml
.scripts/: setup.sh  start.sh  stop.sh
config/: Cargo.toml
config/src/: lib.rs
exchange/: Cargo.toml
exchange/src/: binance.rs  bitkub.rs  exchange.rs  ftx.rs  lib.rs
exchange/src/binance/: ticker.rs
exchange/src/bitkub/: ticker.rs
exchange/src/ftx/: ticker.rs
hodler/: Cargo.toml
hodler/src/: lib.rs  models.rs
hodler/src/models/: currency.rs  price.rs  ticker.rs
server/: Cargo.toml
server/src/: cors.rs  get_cryptocurrencies.rs  get_currencies.rs  get_insights.rs  get_overviews.rs  health_check.rs  lib.rs
signal/: Cargo.toml
signal/src/: hodler.rs  main.rs  server.rs
signal/src/hodler/models/: oracle.rs  price.rs  signal.rs  ticker.rs
specification/: Cargo.toml
specification/src/: lib.rs
src/: config.rs  main.rs
src/exchange/: exchange.rs  mod.rs
src/exchange/binance/: binance.rs  mod.rs  ticker.rs
src/exchange/bitkub/: bitkub.rs  mod.rs  ticker.rs
src/hodler/: hodler.rs  mod.rs  server.rs
src/hodler/model/: format.rs  mod.rs  oracle.rs  price.rs  signal.rs  ticker.rs
