[package]
edition = "2021"
name    = "hodler-signal"
version = "0.1.0"


[dependencies]
env_logger        = { version = "0" }
futures-channel   = { version = "0" }
futures-util      = { version = "0" }
hyper             = { version = "0", features = ["full"] }
log               = { version = "0" }
mini-redis        = { version = "0" }
serde             = { version = "1", features = ["derive"] }
serde_json        = { version = "1" }
tokio             = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0", features = ["native-tls"] }
