[package]
edition = "2021"
name    = "exchange"
version = "0.1.0"


[dependencies]
config            = { path = "../config" }
futures-util      = { version = "0" }
serde             = { version = "1", features = ["derive"] }
tokio             = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0", features = ["native-tls"] }
