[package]
edition = "2021"
name    = "signal"
version = "0.1.0"


[dependencies]
config            = { path = "../config" }
env_logger        = { version = "0" }
exchange          = { path = "../exchange" }
futures-util      = { version = "0" }
hodler            = { path = "../hodler" }
hyper             = { version = "0", features = ["full"] }
log               = { version = "0" }
serde             = { version = "1", features = ["derive"] }
serde_json        = { version = "1" }
tokio             = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0", features = ["native-tls"] }
